--- a/index.html
+++ b/index.html
@@ -12,39 +12,20 @@
 
 </head>
 
-<nav class="navbar navbar-expand-lg navbar-dark container-fluid navbar-card ">
-    <div class="container-fluid text-center">
-        <a class="navbar-brand" href="#"> <img src="images\Dofus_emeraude.png" alt="" width="30" height="30"
-                padding-top="" class="d-inline-block align-text-top"> Dofus Manager </a>
 
-    </div>
-
-</nav>
 
 <body>
     <div class="array-card">
         
-        <table class="" id="tab_logic">
+        <table class="table-card" id="tab_logic">
             <thead>
                 <tr>
-                    <th class="text-center th">
-                        #
-                    </th>
-                    <th class="text-center th">
-                        ID
-                    </th>
-                    <th class="text-center th">
-                        Name
-                    </th>
-                    <th class="text-center th">
-                        Classe
-                    </th>
-                    <th class="text-center th">
-                        LVL
-                    </th>
-                    <th class="text-center th">
-                        Details
-                    </th>
+                    <th class="th">N°</th>
+                    <th class="th">ID</th>
+                    <th class="th">Name</th>
+                    <th class="th">Classe</th>
+                    <th class="th">LVL</th>
+                    <th class="th">Details</th>
                 </tr>
             </thead>
             <tbody>
@@ -53,27 +34,27 @@
                         1
                     </td>
                     <td>
-                        <input type="text" name='ID0' placeholder='ID' class="form-txt-card" />
+                        <input type="text" name='ID0' placeholder='ID' class="form-input-card" />
                     </td>
                     <td>
-                        <input type="text" name='pass0' placeholder='Name' class="form-txt-card" />
+                        <input type="text" name='pass0' placeholder='Name' class="form-input-card" />
                     </td>
                     <td>
-                        <input type="text" name='Classe0' placeholder='Classe' class="form-txt-card" />
+                        <input type="text" name='Classe0' placeholder='Classe' class="form-input-card" />
                     </td>
                     <td>
-                        <input type="text" name='LVL0' placeholder='LVL' class="form-txt-card" />
+                        <input type="text" name='LVL0' placeholder='LVL' class="form-input-card" />
                     </td>
                     <td>
-                        <input type="text" name='Details' placeholder='Details' class="form-txt-card" />
+                        <input type="text" name='Details' placeholder='Details' class="form-input-card" />
                     </td>
                 </tr>
                 <tr id='addr1'></tr>
             </tbody>
         </table>
 
-        <a id="add_row" class="btn btn-default pull-left ">Add Row</a>
-        <a id='delete_row' class="pull-right btn btn-default">Delete Row</a>
+        <a id="add_row" class="">Add Row</a>
+        <a id='delete_row' class="">Delete Row</a>
 
     </div>
 
