--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 
 
 <body>
-    <div class="array-card">
+    <div class="">
         
-        <table class="table-card" id="tab_logic">
+        <table class="" id="tab_logic">
             <thead>
                 <tr>
-                    <th class="th">N°</th>
-                    <th class="th">ID</th>
-                    <th class="th">Name</th>
-                    <th class="th">Classe</th>
-                    <th class="th">LVL</th>
-                    <th class="th">Details</th>
+                    <th class="">N°</th>
+                    <th class="">ID</th>
+                    <th class="">Name</th>
+                    <th class="">Classe</th>
+                    <th class="">LVL</th>
+                    <th class="">Details</th>
                 </tr>
             </thead>
             <tbody>
@@ -34,19 +34,19 @@
                         1
                     </td>
                     <td>
-                        <input type="text" name='ID0' placeholder='ID' class="form-input-card" />
+                        <input type="text" name='ID0' placeholder='ID' class="" />
                     </td>
                     <td>
-                        <input type="text" name='pass0' placeholder='Name' class="form-input-card" />
+                        <input type="text" name='pass0' placeholder='Name' class="" />
                     </td>
                     <td>
-                        <input type="text" name='Classe0' placeholder='Classe' class="form-input-card" />
+                        <input type="text" name='Classe0' placeholder='Classe' class="" />
                     </td>
                     <td>
-                        <input type="text" name='LVL0' placeholder='LVL' class="form-input-card" />
+                        <input type="text" name='LVL0' placeholder='LVL' class="" />
                     </td>
                     <td>
-                        <input type="text" name='Details' placeholder='Details' class="form-input-card" />
+                        <input type="text" name='Details' placeholder='Details' class="" />
                     </td>
                 </tr>
                 <tr id='addr1'></tr>
