--- a/index.html
+++ b/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dofus Manager</title>
     <link rel="icon" type="image/png" href="images\Dofus_emeraude.png" sizes="96x96">
     <link href="style.css" rel="stylesheet" type="text/css">
-    <link href="normalize.css" rel="stylesheet" type="text/css">
+   
 
 </head>
+
 <body>
-   
+    <div class="main-div">
         <table class="main-table" id="tab_logic">
             <thead>
                 <tr>
-                    <th class="">N°</th>
-                    <th class="">ID</th>
-                    <th class="">Name</th>
-                    <th class="">Classe</th>
-                    <th class="">LVL</th>
-                    <th class="">Details</th>
+                    <th class=""></th>
+                    <th class=""></th>
+                    <th class=""></th>
+                    <th class=""></th>
+                    <th class=""></th>
+                    <th class=""></th>
                 </tr>
             </thead>
             <tbody>
@@ -46,7 +48,6 @@
                 <tr id='addr1'></tr>
             </tbody>
         </table>
-
         <a id="add_row" class="">Add Row</a>
         <a id='delete_row' class="">Delete Row</a>
     </div>
@@ -54,4 +55,5 @@
     <script src="node_modules\jquery\dist\jquery.min.js"></script>
     <script src="app.js" type="text/javascript"></script>
 </body>
+
 </html>
