--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Dofus Manager</title>
     <link rel="icon" type="image/png" href="images\Dofus_emeraude.png" sizes="96x96">
     <link href="style.css" rel="stylesheet" type="text/css">
-   
+
 
 </head>
 
@@ -16,12 +16,12 @@
         <table class="main-table" id="tab_logic">
             <thead>
                 <tr>
-                    <th class=""></th>
-                    <th class=""></th>
-                    <th class=""></th>
-                    <th class=""></th>
-                    <th class=""></th>
-                    <th class=""></th>
+                    <th class="">#</th>
+                    <th class="">ID</th>
+                    <th class="">Name</th>
+                    <th class="">Classe</th>
+                    <th class="">LVL</th>
+                    <th class="">Details</th>
                 </tr>
             </thead>
             <tbody>
@@ -47,9 +47,12 @@
                 </tr>
                 <tr id='addr1'></tr>
             </tbody>
+
         </table>
+
         <a id="add_row" class="">Add Row</a>
         <a id='delete_row' class="">Delete Row</a>
+
     </div>
     <script src="jquery"></script>
     <script src="node_modules\jquery\dist\jquery.min.js"></script>
